study/flex-and-bison/flex/fb3-1/y.output
Grammar

    0 $accept: calclist $end

    1 calclist: %empty
    2         | calclist exp EOL
    3         | calclist EOL

    4 exp: factor
    5    | exp '+' factor
    6    | exp '-' factor

    7 factor: term
    8       | factor '*' term
    9       | factor '/' term

   10 term: NUMBER
   11     | '|' term
   12     | '(' exp ')'
   13     | '-' term


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12
    ')' (41) 12
    '*' (42) 8
    '+' (43) 5
    '-' (45) 6 13
    '/' (47) 9
    '|' (124) 11
    error (256)
    NUMBER <d> (258) 10
    EOL (259) 2 3


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    calclist (13)
        on left: 1 2 3
        on right: 0 2 3
    exp <a> (14)
        on left: 4 5 6
        on right: 2 5 6 12
    factor <a> (15)
        on left: 7 8 9
        on right: 4 5 6 8 9
    term <a> (16)
        on left: 10 11 12 13
        on right: 7 8 9 11 13


State 0

    0 $accept: • calclist $end

    $default  reduce using rule 1 (calclist)

    calclist  go to state 1


State 1

    0 $accept: calclist • $end
    2 calclist: calclist • exp EOL
    3         | calclist • EOL

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    EOL     shift, and go to state 4
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    exp     go to state 8
    factor  go to state 9
    term    go to state 10


State 2

    0 $accept: calclist $end •

    $default  accept


State 3

   10 term: NUMBER •

    $default  reduce using rule 10 (term)


State 4

    3 calclist: calclist EOL •

    $default  reduce using rule 3 (calclist)


State 5

   13 term: '-' • term

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    term  go to state 11


State 6

   11 term: '|' • term

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    term  go to state 12


State 7

   12 term: '(' • exp ')'

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    exp     go to state 13
    factor  go to state 9
    term    go to state 10


State 8

    2 calclist: calclist exp • EOL
    5 exp: exp • '+' factor
    6    | exp • '-' factor

    EOL  shift, and go to state 14
    '+'  shift, and go to state 15
    '-'  shift, and go to state 16


State 9

    4 exp: factor •
    8 factor: factor • '*' term
    9       | factor • '/' term

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 4 (exp)


State 10

    7 factor: term •

    $default  reduce using rule 7 (factor)


State 11

   13 term: '-' term •

    $default  reduce using rule 13 (term)


State 12

   11 term: '|' term •

    $default  reduce using rule 11 (term)


State 13

    5 exp: exp • '+' factor
    6    | exp • '-' factor
   12 term: '(' exp • ')'

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    ')'  shift, and go to state 19


State 14

    2 calclist: calclist exp EOL •

    $default  reduce using rule 2 (calclist)


State 15

    5 exp: exp '+' • factor

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    factor  go to state 20
    term    go to state 10


State 16

    6 exp: exp '-' • factor

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    factor  go to state 21
    term    go to state 10


State 17

    8 factor: factor '*' • term

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    term  go to state 22


State 18

    9 factor: factor '/' • term

    NUMBER  shift, and go to state 3
    '-'     shift, and go to state 5
    '|'     shift, and go to state 6
    '('     shift, and go to state 7

    term  go to state 23


State 19

   12 term: '(' exp ')' •

    $default  reduce using rule 12 (term)


State 20

    5 exp: exp '+' factor •
    8 factor: factor • '*' term
    9       | factor • '/' term

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 5 (exp)


State 21

    6 exp: exp '-' factor •
    8 factor: factor • '*' term
    9       | factor • '/' term

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 6 (exp)


State 22

    8 factor: factor '*' term •

    $default  reduce using rule 8 (factor)


State 23

    9 factor: factor '/' term •

    $default  reduce using rule 9 (factor)
